--- a/.htaccess
+++ b/.htaccess
@@ -983,3 +983,5 @@ FileETag None
 #     RewriteRule ^(.+)\.(\d+)\.(bmp|css|cur|gif|ico|jpe?g|js|png|svgz?|webp|webmanifest)$ $1.$3 [L]
 # </IfModule>
 
+# redirect html pages to the root domain
+RewriteRule ^index\.html$ / [NC,R,L]
